--- a/bibliography.bib
+++ b/bibliography.bib
@@ -148,3 +148,70 @@ url = {http://arxiv.org/abs/1604.00896},
 volume = {1},
 year = {2016}
 }
+
+% Convexity Reference
+@book{Gradshteyn2007,
+  added-at = {2011-05-02T05:41:34.000+0200},
+  author = {Gradshteyn, I. S. and Ryzhik, I. M.},
+  biburl = {https://www.bibsonomy.org/bibtex/2bae535b4ef6bc86a7a04e6de6fa4d311/peter.ralph},
+  description = {MR: Publications results for "MR Number=(2360010)"},
+  edition = {Seventh},
+  interhash = {1850c3bd20bb756bfc17136ec16a9a7c},
+  intrahash = {bae535b4ef6bc86a7a04e6de6fa4d311},
+  isbn = {978-0-12-373637-6; 0-12-373637-4},
+  keywords = {reference},
+  mrclass = {00A22 (33-00 65-00 65A05)},
+  mrnumber = {2360010 (2008g:00005)},
+  pages = {xlviii+1171},
+  publisher = {Elsevier/Academic Press, Amsterdam},
+  timestamp = {2011-05-02T05:41:34.000+0200},
+  title = {Table of integrals, series, and products},
+  year = 2007
+}
+
+@book{Anton2014,
+  added-at = {2016-05-31T10:53:16.000+0200},
+  author = {Anton, Howard and Rorres, Chris},
+  biburl = {https://www.bibsonomy.org/bibtex/23d125adef6e8701a7dce93bdc817f3bc/ytyoun},
+  edition = {Eleventh},
+  interhash = {661a46a89feed199e73bf45361ebae37},
+  intrahash = {3d125adef6e8701a7dce93bdc817f3bc},
+  isbn = {9781118434413 1118434412 9781118474228 1118474228},
+  keywords = {linear.algebra matrix textbook},
+  publisher = {Wiley},
+  refid = {856647689},
+  timestamp = {2016-05-31T13:03:34.000+0200},
+  title = {Elementary Linear Algebra: Applications Version},
+  year = 2014
+}
+
+% Studying non concave quadratic ratio
+@article{Hongyan2014,
+author = {Hongyan Cai and Yanfei Wang and Tao Yi},
+title = {An approach for minimizing a quadratically constrained fractional 
+quadratic problem with application to the communications over wireless channels
+},
+journal = {Optimization Methods and Software},
+volume = {29},
+number = {2},
+pages = {310-320},
+year = {2014},
+doi = {10.1080/10556788.2012.711330},
+URL = {http://dx.doi.org/10.1080/10556788.2012.711330},
+eprint = {http://dx.doi.org/10.1080/10556788.2012.711330}
+}
+
+@article{Beck2009,
+author="Beck, Amir
+and Teboulle, Marc",
+title="A convex optimization approach for minimizing the ratio of indefinite 
+quadratic functions over an ellipsoid",
+journal="Mathematical Programming",
+year="2009",
+volume="118",
+number="1",
+pages="13--35",
+issn="1436-4646",
+doi="10.1007/s10107-007-0181-x",
+url="http://dx.doi.org/10.1007/s10107-007-0181-x"
+}
