--- a/tex/states.tex
+++ b/tex/states.tex
@@ -8,10 +8,10 @@
     \begin{tikzpicture}
     \tikzstyle{state}=[minimum width=1cm, font=\boldmath];
 
-	\node[circle, draw, thick] (0) at (0, 0) [state] {CC};
-	\node[circle, draw, thick] (1) at (3, 0) [state] {CD};
-	\node[circle, draw, thick] (2) at (0, -2.5) [state] {DC};
-	\node[circle, draw, thick] (3) at (3, -2.5) [state] {DD};
+	\node[circle, draw, thick] (0) at (0, 0) [state] {$CC$};
+	\node[circle, draw, thick] (1) at (3, 0) [state] {$CD$};
+	\node[circle, draw, thick] (2) at (0, -2.5) [state] {$DC$};
+	\node[circle, draw, thick] (3) at (3, -2.5) [state] {$DD$};
 
 	\node[above right of=0] (p1) {C};
 	\node[below right of=0] (minus_p1) {D};
