--- a/tex/markov_chain.tex
+++ b/tex/markov_chain.tex
@@ -16,7 +16,7 @@
 	\node[circle, draw, thick] (2) at (0, -3.5) [state] {$DC$};
 	\node[circle, draw, thick] (3) at (3.5, -3.5) [state] {$DD$};
 
-	\draw (0) edge[out=20, in=160, ->, thick] node [above] {$1 - p_1$} (1);
+	\draw (0) edge[out=20, in=160, ->, thick] node [above] {} (1);
 	\draw (1) edge[out=-160, in=-20, ->, thick] node [above] {} (0);
 
 	\draw (2) edge[out=20, in=160, ->, thick] node [above] {} (3);
@@ -34,11 +34,11 @@
     \draw (1) edge[out=-125, in=35, ->, thick] node [above] {} (2);
     \draw (2) edge[ out=55, in=-145, ->, thick] node [above] {} (1);
 
-    \draw (0) edge[out=180, in=135, ->, thick, loop] node [above, yshift=.1cm] {$p_1$} (0);
-    \draw (2) edge[out=180, in=135, ->, thick, loop] node [above, yshift=.1cm] {$p_2$} (2);
+    \draw (0) edge[out=180, in=135, ->, thick, loop] node [above, yshift=.1cm] {} (0);
+    \draw (2) edge[out=180, in=135, ->, thick, loop] node [above, yshift=.1cm] {} (2);
 
-    \draw (1) edge[out=0, in=45, ->, thick, loop] node [above, yshift=.1cm] {$p_3$} (1);
-    \draw (3) edge[ out=0, in=45, ->, thick, loop] node [above, yshift=.1cm] {$p_4$} (3);
+    \draw (1) edge[out=0, in=45, ->, thick, loop] node [above, yshift=.1cm] {} (1);
+    \draw (3) edge[ out=0, in=45, ->, thick, loop] node [above, yshift=.1cm] {} (3);
 
     \end{tikzpicture}
 
